[package]
name = "wsl-get"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
argopt = "0.1.1"
dialoguer = "0.8.0"
directories = "3.0.2"
flate2 = "1.0.20"
regex = "1.5.4"
scopeguard = "1.1.0"
structopt = "0.3.21"
tempfile = "3.2.0"
windows = "0.11.0"

[build-dependencies]
windows = "0.11.0"
